# verified_rup

./: .gitignore  LICENSE  MANIFEST.in  README.md  dune-project  makewheels.sh  pyproject.toml  setup.py
docs/: drup.html  index.html  module.html.jinja2  search.js
src/drup/: __init__.py  cli.py  wrappers.py
src/librupchecker/: bindings.ml  checker.ml  dimacs.ml  dune  generate.ml  init.c  link.ml  rup_pure.mlw  rup_pure.mlw.bak  stubs.c
src/librupchecker/rup_pure/: why3session.xml  why3session.xml.bak
src/librupchecker/test/: why3session.xml
src/ocaml/: checker.ml  dimacs.ml  dune  stubs.c
src/rup/: __init__.py
src/verified_rup/: __init__.py  wrappers.py
tests/: php_rat.py  run_examples.py  test_simplify.py
tests/examples/: schur.drup  uuf-100-1.drup  uuf-100-2.drup  uuf-100-3.drup  uuf-100-4.drup  uuf-100-5.drup
