[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rup"
version = "1.0.0"
authors = [
  { name="Matt Fredrikson", email="mfredrik@cmu.edu" },
]
description = "Checks DRUP proofs against DIMACS source. Extracted from verified Why3 code."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Ocaml :: 4.13",
    "Programming Language :: Why3 :: 1.5.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/cmu-transparency/verified_rup"
"Bug Tracker" = "https://github.com/cmu-transparency/verified_rup/issues"