[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drup"
version = "1.2.0"
authors = [
  { name="Matt Fredrikson", email="mfredrik@cmu.edu" },
]
description = "Checks DRUP proofs against DIMACS source. Extracted from verified Why3 code."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: OCaml",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Mathematics"

]

[project.urls]
"Homepage" = "https://github.com/cmu-transparency/verified_rup"
"Bug Tracker" = "https://github.com/cmu-transparency/verified_rup/issues"